# botapidev

./: .env.example  .gitignore  README.md  pyproject.toml
book-bot/: __main__.py
book-bot/config_data/: __init__.py  config.py  settings.py
book-bot/database/: __init__.py  book-bot.sql  database.py  postgres.py
book-bot/filters/: __init__.py  filters.py
book-bot/handlers/: other_handlers.py  user_handlers.py
book-bot/keyboards/: __init__.py  bookmarks_kb.py  books_kb.py  main_menu.py  pagination_kb.py
book-bot/services/: __init__.py  book_handling.py  parse_json.py
book-bot/store/: ham_on_rye.json  ham_on_rye.txt  women.json  women.txt
book-bot/vocabulary/: vocabulary.py
echo-bot/: config.py  filters.py  handlers.py  main.py  vocabulary.py
guess-bot/: bot.py  config.py  db.py  handlers.py  keyboards.py  main.py  settings.py  temp.py  vocabulary.py
guess-bot/db/: __init__.py  db.py
rpsbot/: handlers.py  inline_buttons.py  keyboard_functions.py  keyboards.py  main.py  regular_buttons.py  vocabulary.py
